--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ about_section:
 
 {% assign general_data = site.data.general_settings %}
 
-<!--DESKTOP-->
+<!-- START DESKTOP-->
 
 <section
         class="container-fluid text-white text-center d-flex align-items-start py-0 vh-100 pageHero__Home__Inner d-none d-lg-block overflow-y-hidden"
@@ -61,8 +61,9 @@ about_section:
 <section class="d-none d-lg-block">
     {% include contact_form.html %}
 </section>
+<!--END DESKTOP-->
 
-<!--MOBILE-->
+<!-- START MOBILE-->
 
 <section class=" text-white py-0 d-lg-none z-0 py-0"
          style="background-image: url({{ page.hero_section.background_image_url}});background-size: cover; ">
@@ -80,12 +81,13 @@ about_section:
             </div>
         </div>
         <div class=" d-flex justify-content-center py-4 bg-success">
-            <h2 class="text-white display-3 text-white text-uppercase col-8">
+            <h2 class="text-white display-2 text-white text-uppercase col-8">
                 contact us now for a consultation
             </h2>
         </div>
     </div>
 </section>
+<!--END MOBILE-->
 
 <!--DESKTOP INFO NAV HERE-->
 
@@ -117,37 +119,37 @@ about_section:
         </div>
         <div class="tab-content col-6 d-flex align-items-center" id="serviceTabContent">
             <div class="tab-pane fade fs-2" id="personal-injury-content" role="tabpanel" aria-labelledby="personal-injury-tab">
-                <p>
+                <p class="editable">
                 If you were injured through no fault of your own and need help navigating through the legal system contact us immediately. When dealing with these difficult, fragile matters, you will need an attorney with not only experience, but with compassion. Someone who will take a personal interest in your case and have your best interest in mind.
                 </p>
                 <a href="/personal-injury" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="criminal-law-content" role="tabpanel" aria-labelledby="criminal-law-tab">
-                <p>
+                <p class="editable">
                 Our firm offers criminal defense services to those charged with having committed a crime. We take representation of a client very seriously as we understand the emotional toll placed on a person and their family when someone has been accused and/or charged with committing a crime. Our firm works tirelessly from the moment we are contacted by a client or their family, be it the day they are arrested or the week before trial.
                 </p>
                 <a href="/criminal-law" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
              <div class="tab-pane fade fs-2" id="family-law-content" role="tabpanel" aria-labelledby="family-law-tab">
-                 <p>
+                 <p class="editable">
                  We realize that extended litigation should be a last alternative in resolving a domestic or family dispute. We work to achieve our clients goals with the least emotional and financial expense.
                  </p>
                  <a href="/family-law" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="dwi-owi-content" role="tabpanel" aria-labelledby="dwi-owi-tab">
-                <p>
+                <p class="editable">
                 If you have been arrested for driving under the influence of alcohol or drugs, it is imperative that you contact my office immediately. DUI cases can develop relatively quick, and the more time that I have to gather the facts, the better the case I can build to defend you.
                 </p>
                 <a href="/dwi-owi" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="estate-content" role="tabpanel" aria-labelledby="estate-tab">
-                <p>
+                <p class="editable">
                 Call today to set up an appointment so that I can help you plan for your future so that your wishes can be carried out.
                 </p>
                 <a href="/estate-planning" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
             </div>
             <div class="tab-pane fade fs-2" id="additional-services-content" role="tabpanel" aria-labelledby="additional-services-tab">
-                <p>
+                <p class="editable">
                 We pride ourselves on being a full service law firm and strive to fulfill our clients needs. Should you have a problem and/or dispute not specifically delineated above, please feel free to contact my office for a consultation.
                 </p>
                 <a href="/additional-services" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
@@ -155,6 +157,38 @@ about_section:
         </div>
     </div>
 </section>
+
+<!--DESKTOP INFO NAV END-->
+
+<!--MOBILE INFO NAV HERE-->
+
+<section class="container-fluid d-flex d-lg-flex justify-content-center py-5">
+    <div class="py-5">
+        <ul class="navbar-nav display-2">
+            <li class="nav-item">
+                <a class="nav-link index-info-color dropdown-center dropdown-toggle " href="#" id="mobile-legalDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false">SOMETHING HERE</a>
+                <ul class="dropdown-menu border-0">
+                    <li><a class="dropdown-item text-uppercase index-info-color" data-target="#content1">SOMETHING HERE</a></li>
+                    <li><a class="dropdown-item text-uppercase index-info-color">SOMETHING HERE</a></li>
+                    <li><a class="dropdown-item text-uppercase index-info-color">SOMETHING HERE</a></li>
+                    <li><a class="dropdown-item text-uppercase index-info-color">SOMETHING HERE</a></li>
+                    <li><a class="dropdown-item text-uppercase index-info-color">SOMETHING HERE</a></li>
+                </ul>
+            </li>
+
+        </ul>
+    </div>
+    <div>
+        <div id="content1" class="content-item" style="display:none;">Content for first dropdown item</div>
+
+    </div>
+
+
+</section>
+
+
+
+<!--MOBILE INFO NAV END-->
 
 <!--<section class="">-->
 <!--    <section class="d-flex flex-row justify-content-between serviceMenu  mx-auto maxWidth">-->
@@ -227,9 +261,9 @@ about_section:
 
 <!-- DESKTOP MCCORMICK AREA HERE-->
 
-<div class="container-fluid d-none d-lg-block">
-    <div class="row justify-content-around">
-        <div class=" col-8 d-flex px-0 py-5 position-relative">
+<div class="d-none d-lg-block">
+    <div class="row justify-content-between me-0">
+        <div class=" col-8 d-flex py-5">
             {% if about.background_image %}
             <img src="{{ about.background_image }}" alt="paper" class="img-fluid py-5">
             {% endif %}
@@ -240,7 +274,7 @@ about_section:
                     <img src="/assets/images/about_sm.jpg?_cchid=23ecf755b0243d1bb7a93a2eb5b67d9d" alt="SHANE MCCORMICK" class="img-fluid rounded-circle">
                 </div>
                 <div class="display-5 text-white col-lg-10 col-xl-10"> SHANE MCCORMICK
-                    <p class="fs-3 py-3">
+                    <p class="fs-3 py-3 col-11 editable">
                         Shane McCormick has over 20 years of legal experience fighting for diverse clients. As a veteran, he knows the importance of persistence and determination. He brings all these valuable skills to the courtroom to ensure the best possible outcome for every client, every time. A local attorney who knows the system, he has been providing outstanding legal services to Acadiana and the surrounding area since 2002.
                     </p>
                 </div>
@@ -248,6 +282,31 @@ about_section:
         </div>
     </div>
 </div>
+
+<!--MOBILE MCCORMICK AREA HERE-->
+
+<div class="d-block d-lg-none">
+    <div class="">
+        <div class="row row-cols-1 justify-content-center " style="background: linear-gradient(180deg, rgba(116,22,37,.9), rgba(58,11,19,.9));">
+            <div class="d-flex col-8 border-0 py-3">
+                <img src="/assets/images/about_sm.jpg?_cchid=23ecf755b0243d1bb7a93a2eb5b67d9d" alt="SHANE MCCORMICK" class="img-fluid rounded-circle">
+            </div>
+            <div class="col-12 d-flex justify-content-center text-white display-2 py-3"> SHANE MCCORMICK
+            </div>
+            <div class="col-12 px-5 d-flex justify-content-center display-5 text-white">
+                <p class="editable ">
+                    Shane McCormick has over 20 years of legal experience fighting for diverse clients. As a veteran, he knows the importance of persistence and determination. He brings all these valuable skills to the courtroom to ensure the best possible outcome for every client, every time. A local attorney who knows the system, he has been providing outstanding legal services to Acadiana and the surrounding area since 2002.
+                </p>
+            </div>
+            <div class="col-12 d-flex justify-content-start px-5 py-3">
+                <div class="col-7 pb-3" >
+                    <a href="/about" class="d-flex btn btn-primary btn-lg rounded-0 learn-more-white-btn fs-2 fw-semibold justify-content-center py-3" role="button">LEARN MORE</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <section class="d-flex d-lg-none justify-content-center">
     <div class="col-12 col-sm-10 px-5 py-5">
         <h5 class="formSection__Heading editable col-12">REQUEST A CONSULTATION</h5>
