--- a/_pages/legal-services.html
+++ b/_pages/legal-services.html
@@ -138,160 +138,233 @@ additional_services_section:
 <!--    </section>-->
 
 <section class="container-fluid" style="background: linear-gradient(180deg, #741625, #3a0b13);">
-    <div class="col-12 display-1">
-        {% if page.banner_section.description %}
-        <div class="">
+  <div class="py-5">
+    <div class="row align-items-center">
+      <div class="col-6">
+          {% if page.banner_section.title %}
+        <div class="d-flex justify-content-center">
+          <h1 class="col-8 display-1 text-white">{{page.banner_section.title}}</h1>
         </div>
+          {% endif %}
+          {% if page.banner_section.description %}
+        <div class="d-flex justify-content-center ">
+          <p class="col-8 text-white fs-2">{{ page.banner_section.description }}</p>
+        </div>
+          {% endif %}
+      </div>
+      <div class="col-6 legal-img">
+        {% if page.banner_section.background_image_url %}
+        <img class="img-fluid" src="{{ page.banner_section.background_image_url }}" alt="banner">
         {% endif %}
+      </div>
     </div>
+  </div>
 </section>
 
 
-<!--<section class="sliceZone">-->
-<!--   {% assign sectionTwo = page.personal_injury_section %}-->
-<!--    <section class="allServices">-->
-<!--        <div class="allServices__Service">-->
-<!--           {% if sectionTwo.image_url %}-->
-<!--            <div class="allServices__ImgWrapper">-->
-<!--              <img src="{{sectionTwo.image_url}}" alt="{{sectionTwo.title}}" class="allServices__Img" />-->
-<!--            </div>-->
-<!--            {% endif %}-->
-<!--            <div class="allServices__Service__Text">-->
-<!--               {% if sectionTwo.title %}-->
-<!--                <h3>{{ sectionTwo.title }}</h3>-->
-<!--               {% endif %}-->
-<!--               {% if sectionTwo.subtitle %}-->
-<!--                <p>{{ sectionTwo.subtitle }}</p>-->
-<!--                {% endif %}-->
-<!--                <ul>-->
-<!--                  {% for list in sectionTwo.lists %}-->
-<!--                    <li>{{ list }}</li>-->
-<!--                  {% endfor %}-->
-<!--                </ul>-->
-<!--                {% if sectionTwo.button_text %}-->
-<!--                 <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
-<!--                {% endif %}-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        {% assign sectionThree = page.criminal_law_section %}-->
-<!--        <div class="allServices__Service">-->
-<!--           {% if sectionThree.image_url %}-->
-<!--            <div class="allServices__ImgWrapper">-->
-<!--              <img src="{{sectionThree.image_url}}" alt="{{sectionThree.title}}" class="allServices__Img" />-->
-<!--            </div>-->
-<!--            {% endif %}-->
-<!--            <div class="allServices__Service__Text">-->
-<!--               {% if sectionThree.title %}-->
-<!--                <h3>{{ sectionThree.title }}</h3>-->
-<!--               {% endif %}-->
-<!--               {% if sectionThree.subtitle %}-->
-<!--                <p>{{ sectionThree.subtitle }}</p>-->
-<!--                {% endif %}-->
-<!--                <ul>-->
-<!--                  {% for list in sectionThree.lists %}-->
-<!--                    <li>{{ list }}</li>-->
-<!--                  {% endfor %}-->
-<!--                </ul>-->
-<!--                {% if sectionThree.button_text %}-->
-<!--                  <a href="{{ sectionThree.button_url }}">{{sectionThree.button_text}}</a>-->
-<!--                {% endif %}-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        {% assign sectionFour = page.family_law_section %}-->
-<!--        <div class="allServices__Service">-->
-<!--           {% if sectionFour.image_url %}-->
-<!--            <div class="allServices__ImgWrapper">-->
-<!--              <img src="{{sectionFour.image_url}}" alt="{{sectionFour.title}}" class="allServices__Img" />-->
-<!--            </div>-->
-<!--            {% endif %}-->
-<!--            <div class="allServices__Service__Text">-->
-<!--              {% if sectionFour.title %}-->
-<!--                <h3>{{ sectionFour.title }}</h3>-->
-<!--               {% endif %}-->
-<!--               {% if sectionFour.subtitle %}-->
-<!--                <p>{{ sectionFour.subtitle }}</p>-->
-<!--                {% endif %}-->
-<!--                <ul>-->
-<!--                  {% for list in sectionFour.lists %}-->
-<!--                    <li>{{ list }}</li>-->
-<!--                  {% endfor %}-->
-<!--                </ul>-->
-<!--                {% if sectionFour.button_text %}-->
-<!--                 <a href="{{ sectionFour.button_url }}">{{sectionFour.button_text}}</a>-->
-<!--                {% endif %}-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        {% assign sectionFive = page.dwi_owi_section %}-->
-<!--        <div class="allServices__Service">-->
-<!--           {% if sectionFive.image_url %}-->
-<!--            <div class="allServices__ImgWrapper">-->
-<!--              <img src="{{sectionFive.image_url}}" alt="{{sectionFive.title}}" class="allServices__Img" />-->
-<!--            </div>-->
-<!--            {% endif %}-->
-<!--            <div class="allServices__Service__Text">-->
-<!--               {% if sectionFive.title %}-->
-<!--                <h3>{{ sectionFive.title }}</h3>-->
-<!--               {% endif %}-->
-<!--               {% if sectionFive.subtitle %}-->
-<!--                <p>{{ sectionFive.subtitle }}</p>-->
-<!--                {% endif %}-->
-<!--                <ul>-->
-<!--                  {% for list in sectionFive.lists %}-->
-<!--                    <li>{{ list }}</li>-->
-<!--                  {% endfor %}-->
-<!--                </ul>-->
-<!--                {% if sectionFive.button_text %}-->
-<!--                 <a href="{{ sectionFive.button_url }}">{{sectionFive.button_text}}</a>-->
-<!--                {% endif %}-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        {% assign sectionSix = page.estate_planning_section %}-->
-<!--        <div class="allServices__Service">-->
-<!--            {% if sectionSix.image_url %}-->
-<!--	            <div class="allServices__ImgWrapper">-->
-<!--	              <img src="{{sectionSix.image_url}}" alt="{{sectionSix.title}}" class="allServices__Img" />-->
-<!--	            </div>-->
-<!--            {% endif %}-->
-<!--            <div class="allServices__Service__Text">-->
-<!--            {% if sectionSix.title %}-->
-<!--             <h3>{{ sectionSix.title }}</h3>-->
-<!--            {% endif %}-->
-<!--            {% if sectionSix.subtitle %}-->
-<!--             <p>{{ sectionSix.subtitle }}</p>-->
-<!--            {% endif %}-->
-<!--              <ul>-->
-<!--                {% for list in sectionSix.lists %}-->
-<!--                  <li>{{ list }}</li>-->
-<!--                {% endfor %}-->
-<!--              </ul>-->
-<!--            {% if sectionSix.button_text %}-->
-<!--              <a href="{{ sectionSix.button_url }}">{{sectionSix.button_text}}</a>-->
-<!--            {% endif %}-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        {% assign sectionSeven = page.additional_services_section %}-->
-<!--        <div class="allServices__Service">-->
-<!--            {% if sectionSeven.image_url %}-->
-<!--	            <div class="allServices__ImgWrapper">-->
-<!--	              <img src="{{sectionSeven.image_url}}" alt="{{sectionSeven.title}}" class="allServices__Img" />-->
-<!--	            </div>-->
-<!--            {% endif %}-->
-<!--            <div class="allServices__Service__Text">-->
-<!--               {% if sectionSeven.title %}-->
-<!--                <h3>{{ sectionSeven.title }}</h3>-->
-<!--               {% endif %}-->
-<!--               {% if sectionSeven.subtitle %}-->
-<!--                <p>{{ sectionSeven.subtitle }}</p>-->
-<!--                {% endif %}-->
-<!--                <ul>-->
-<!--                  {% for list in sectionSeven.lists %}-->
-<!--                    <li>{{ list }}</li>-->
-<!--                  {% endfor %}-->
-<!--                </ul>-->
-<!--                {% if sectionSeven.button_text %}-->
-<!--                 <a href="{{ sectionSeven.button_url }}">{{sectionSeven.button_text}}</a>-->
-<!--                {% endif %}-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-<!--</section>-->
+<section class="sliceZone">
+   {% assign sectionTwo = page.personal_injury_section %}
+    <section class="allServices fs-3 ">
+        <div class="allServices__Service row me-0 justify-content-end">
+          <div class="col-4 d-flex">
+            <img src="{{sectionTwo.image_url}}" alt="{{sectionTwo.title}}" class="img-fluid " />
+          </div>
+          <div class="d-flex col-8 justify-content-around pb-5">
+              <div class="allServices__Service__Text col-8 py-5">
+                 {% if sectionTwo.title %}
+                  <h3 class="px-4 fs-3  ">{{ sectionTwo.title }}</h3>
+                 {% endif %}
+                 {% if sectionTwo.subtitle %}
+                  <p class="px-4 fs-4 ">{{ sectionTwo.subtitle }}</p>
+                  {% endif %}
+                  <div class="fs-4">
+                    <div class="d-flex flex-wrap">
+                      {% for list in sectionTwo.lists %}
+                      <div class="col-6 d-flex link-container">
+                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
+                      </div>
+                      {% endfor %}
+                    </div>
+                    {% if sectionTwo.button_text %}
+<!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
+                    <a href="{{ sectionTwo.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-4" role="button">{{sectionTwo.button_text}}</a>
+                    {% endif %}
+                  </div>
+              </div>
+          </div>
+
+          {% assign sectionThree = page.criminal_law_section %}
+           {% if sectionThree.image_url %}
+          <div class="d-flex col-7 justify-content-around pb-5">
+            <div class="allServices__Service__Text col-11 py-5">
+               {% if sectionThree.title %}
+                <h3 class="px-4 fs-3  ">{{ sectionThree.title }}</h3>
+               {% endif %}
+               {% if sectionThree.subtitle %}
+                <p class="px-4 fs-4 ">{{ sectionThree.subtitle }}</p>
+                {% endif %}
+                <div class="fs-4">
+                  <div class="d-flex flex-wrap">
+                      {% for list in sectionThree.lists %}
+                      <div class="col-6 d-flex link-container">
+                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
+                      </div>
+                      {% endfor %}
+                    </div>
+                  {% if sectionThree.button_text %}
+<!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
+                  <a href="{{ sectionThree.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-4" role="button">{{sectionThree.button_text}}</a>
+                  {% endif %}
+                </div>
+            </div>
+              {% endif %}
+          </div>
+          <div class="col-4 p-0 ">
+            <img src="{{sectionThree.image_url}}" alt="{{sectionThree.title}}" class="img-fluid " />
+          </div>
+
+
+          {% assign sectionFour = page.family_law_section %}
+          <div class="col-4 d-flex">
+            <img src="{{sectionFour.image_url}}" alt="{{sectionFour.title}}" class="img-fluid " />
+          </div>
+          <div class="d-flex col-8 justify-content-around pb-5">
+              <div class="allServices__Service__Text col-8 py-5">
+                 {% if sectionFour.title %}
+                  <h3 class="px-4 fs-3  ">{{ sectionFour.title }}</h3>
+                 {% endif %}
+                 {% if sectionFour.subtitle %}
+                  <p class="px-4 fs-4 ">{{ sectionFour.subtitle }}</p>
+                  {% endif %}
+                  <div class="fs-4">
+                    <div class="d-flex flex-wrap">
+                      {% for list in sectionFour.lists %}
+                      <div class="col-6 d-flex link-container">
+                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
+                      </div>
+                      {% endfor %}
+                    </div>
+                    {% if sectionFour.button_text %}
+<!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
+                    <a href="{{ sectionFour.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-4" role="button">{{sectionFour.button_text}}</a>
+                    {% endif %}
+                  </div>
+              </div>
+          </div>
+
+
+          {% assign sectionFive = page.dwi_owi_section %}
+
+            {% if sectionFive.image_url %}
+          <div class="d-flex col-7 justify-content-around pb-5">
+            <div class="allServices__Service__Text col-11 py-5">
+               {% if sectionFive.title %}
+                <h3 class="px-4 fs-3  ">{{ sectionThree.title }}</h3>
+               {% endif %}
+               {% if sectionFive.subtitle %}
+                <p class="px-4 fs-4 ">{{ sectionFive.subtitle }}</p>
+                {% endif %}
+                <div class="fs-4">
+                  <div class="d-flex flex-wrap">
+                      {% for list in sectionFive.lists %}
+                      <div class="col-6 d-flex link-container">
+                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
+                      </div>
+                      {% endfor %}
+                    </div>
+                  {% if sectionFive.button_text %}
+<!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
+                  <a href="{{ sectionFive.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-4" role="button">{{sectionFive.button_text}}</a>
+                  {% endif %}
+                </div>
+            </div>
+              {% endif %}
+          </div>
+          <div class="col-4 p-0 ">
+            <img src="{{sectionFive.image_url}}" alt="{{sectionFive.title}}" class="img-fluid " />
+          </div>
+
+
+        {% assign sectionSix = page.estate_planning_section %}
+
+          <div class="col-4 d-flex">
+            <img src="{{sectionSix.image_url}}" alt="{{sectionSix.title}}" class="img-fluid " />
+          </div>
+          <div class="d-flex col-8 justify-content-around pb-5">
+              <div class="allServices__Service__Text col-8 py-5">
+                 {% if sectionSix.title %}
+                  <h3 class="px-4 fs-3  ">{{ sectionSix.title }}</h3>
+                 {% endif %}
+                 {% if sectionSix.subtitle %}
+                  <p class="px-4 fs-4 ">{{ sectionSix.subtitle }}</p>
+                  {% endif %}
+                  <div class="fs-4">
+                    <div class="d-flex flex-wrap">
+                      {% for list in sectionSix.lists %}
+                      <div class="col-6 d-flex link-container">
+                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
+                      </div>
+                      {% endfor %}
+                    </div>
+                    {% if sectionSix.button_text %}
+<!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
+                    <a href="{{ sectionSix.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-4" role="button">{{sectionSix.button_text}}</a>
+                    {% endif %}
+                  </div>
+              </div>
+          </div>
+        {% assign sectionSeven = page.additional_services_section %}
+          {% if sectionSeven.image_url %}
+          <div class="d-flex col-7 justify-content-around pb-5">
+            <div class="allServices__Service__Text col-11 py-5">
+               {% if sectionSeven.title %}
+                <h3 class="px-4 fs-3  ">{{ sectionSeven.title }}</h3>
+               {% endif %}
+               {% if sectionSeven.subtitle %}
+                <p class="px-4 fs-4 ">{{ sectionSeven.subtitle }}</p>
+                {% endif %}
+                <div class="fs-4">
+                  <div class="d-flex flex-wrap">
+                      {% for list in sectionSeven.lists %}
+                      <div class="col-6 d-flex link-container">
+                        <li class="ps-3" style="text-indent: -1em;">{{ list }}</li>
+                      </div>
+                      {% endfor %}
+                    </div>
+                  {% if sectionSeven.button_text %}
+<!--                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>-->
+                  <a href="{{ sectionSeven.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-4" role="button">{{sectionSeven.button_text}}</a>
+                  {% endif %}
+                </div>
+            </div>
+              {% endif %}
+          </div>
+          <div class="col-4 p-0 ">
+            <img src="{{sectionSeven.image_url}}" alt="{{sectionSeven.title}}" class="img-fluid " />
+          </div>
+<!--          <div class="allServices__Service">-->
+<!--              {% if sectionSeven.image_url %}-->
+<!--                  <div class="allServices__ImgWrapper">-->
+<!--                    <img src="{{sectionSeven.image_url}}" alt="{{sectionSeven.title}}" class="img-fluid" />-->
+<!--                  </div>-->
+<!--              {% endif %}-->
+<!--              <div class="allServices__Service__Text">-->
+<!--                 {% if sectionSeven.title %}-->
+<!--                  <h3>{{ sectionSeven.title }}</h3>-->
+<!--                 {% endif %}-->
+<!--                 {% if sectionSeven.subtitle %}-->
+<!--                  <p>{{ sectionSeven.subtitle }}</p>-->
+<!--                  {% endif %}-->
+<!--                  <ul>-->
+<!--                    {% for list in sectionSeven.lists %}-->
+<!--                      <li>{{ list }}</li>-->
+<!--                    {% endfor %}-->
+<!--                  </ul>-->
+<!--                  {% if sectionSeven.button_text %}-->
+<!--                   <a href="{{ sectionSeven.button_url }}">{{sectionSeven.button_text}}</a>-->
+<!--                  {% endif %}-->
+<!--              </div>-->
+<!--          </div>-->
+        </div>
+    </section>
+</section>
