--- a/_pages/about.html
+++ b/_pages/about.html
@@ -40,18 +40,20 @@ one_column_section: >-
 		<div class="d-none d-lg-flex px-0 col-6">
 			{% if page.about_section.background_image_url %}
 	<!--	  <img class="pageHero__Image" src="{{ page.about_section.background_image_url }}" />-->
-		  <img class="img-fluid object-fit-cover" src="{{ page.about_section.background_image_url }}" />
+		  <img class="img-fluid object-fit-cover w-100" src="{{ page.about_section.background_image_url }}" />
 			{% endif %}
 		</div>
-		<div class="pt-5 col-6" style="background: linear-gradient(180deg, #741625, #3a0b13); ">
+		<div class=" col-6 d-flex justify-content-around py-5 px-5" style="background: linear-gradient(180deg, #741625, #3a0b13); ">
 			{% if page.about_section.title %}
-			 <h1 class="font-size-5-rem pt-5 pb-3 px-5 px-lg-0 py-lg-0 my-0 editable">{{ page.about_section.title }}</h1>
-			{% endif %}
-			{% if page.about_section.description %}
-			 <p class="fs-1 px-5 px-lg-0 pb-5 pb-lg-0 editable">{{ page.about_section.description }}</p>
-			{% endif %}
-			<div class="d-flex justify-content-center d-lg-none py-4 py-lg-0" style="background-color: #70707040">
-			 <a href="tel:{{ general_data.phone }}" class="display-1 link-underline link-underline-opacity-0 text-white">{{ general_data.phone }}</a>
+			<div class=" d-flex flex-column col-xl-7 col-10 justify-content-center">
+				 <h1 class="font-size-5-rem pt-5 pb-3 px-5 px-lg-4 py-lg-0 my-0 editable">{{ page.about_section.title }}</h1>
+				{% endif %}
+				{% if page.about_section.description %}
+				 <p class="fs-4 px-lg-4 pb-5 pb-lg-0 editable col-12 col-lg-12 px-0" style="text-align: justify;">{{ page.about_section.description }}</p>
+				{% endif %}
+				<div class="d-flex justify-content-center d-lg-none py-4 py-lg-0" style="background-color: #70707040">
+				 <a href="tel:{{ general_data.phone }}" class="display-1 link-underline link-underline-opacity-0 text-white">{{ general_data.phone }}</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -100,7 +102,7 @@ one_column_section: >-
 
 <!--DESKTOP VERSION HERE-->
 
-<section class=" d-none d-lg-block sliceZone d-flex row px-0 mx-0 justify-content-center">
+<section class=" d-none d-lg-flex sliceZone d-flex row px-0 mx-0 justify-content-center">
 	<div class="about-mobile-img mt-5 mb-3 d-lg-none">
 		{% for item in page.gallery %}
 		{% unless forloop.first %}
@@ -109,10 +111,10 @@ one_column_section: >-
 		<img src="{{ item.image_url }}" class="{% if forloop.first %} d-flex d-lg-none rounded-circle about-mobile-cover {% else %} {% endif %}" >
 		{% endfor %}
 	</div>
-	<section class="d-flex flex-row pt-0 px-0 mx-0 d-flex justify-content">
-		<div class="d-flex flex-column mx-0 px-0 col-8 py-5 justify-content-center">
+	<section class="d-flex flex-row pt-0 px-0 mx-0 d-flex justify-content-around">
+		<div class="d-flex flex-column mx-0 px-0 col-8 col-xl-9 py-5 my-5 justify-content-center justify-content-xl-between about-mainText-padding">
 			{% for item in page.description %}
-			<div class="col-12 px-5">
+			<div class="col-12 px-5 px-xl-0 col-xl-9">
 				 <p class="py-2 fs-4" style="text-align: justify;"> {{ item.section }} </p>
 			</div>
 			{%endfor%}
@@ -149,7 +151,7 @@ one_column_section: >-
 				</form>
 		</section>
 		</div>
-		<div class="d-flex flex-column col-4 px-0">
+		<div class="d-flex flex-column col-4 col-xl-3 px-0 align-self-">
 			{% for gallery in page.gallery %}
 			<div class="col-12">
 				<img src="{{ gallery.image_url }}" class="img-fluid w-100" />
