Completed mobile criminal-law.html, bugfixing desktop, fixed index.html form

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ about_section:
         <img src="{{page.hero_section.desktop_home_logo_url}}" alt="logo" class="seal d-block img-fluid"/>
     </div>
 </section>
-<section class="d-none d-lg-block">
+<section class="d-none d-lg-block px-5 py-5 bg-success">
     {% include contact_form.html %}
 </section>
 <!--END DESKTOP-->
