--- a/_pages/criminal-law.html
+++ b/_pages/criminal-law.html
@@ -48,27 +48,45 @@ services_section:
 <section>
     <div class="container-fluid mx-0 px-0" style="background: linear-gradient(180deg, #741625, #3a0b13);">
       <div class=" d-none d-lg-block">
-        <div class="row align-items-lg-center justify-content-center mx-0">
-          <div class="col-lg-6 col-xl-6  col col-xl ps-lg-5 ps-xl-5 pe-0 pe-xl-0">
-              {% if page.banner_section.title %}
-            <div class="d-flex justify-content-evenly col-12 col-xl-12 ps-xl-5 ps-5">
-                <div class="d-flex justify-content-center ps-xl-0 ps-0">
-                    <h1 class="col-lg-6 col-xl-6 col-9 font-size-7-rem text-white editable my-xl-0 lh-1">{{page.banner_section.title}}</h1>
-                </div>
-            </div>
-              {% endif %}
-              {% if page.banner_section.lists %}
-            <div class="d-flex ps-5 ps-xl-5 justify-content-evenly py-xl-2">
-                <div class="d-flex ps-5 ps-xl-0 justify-content-center col-xl-12 ms-xl-4 ">
-                    <p class="col-5 col-xl-6 text-white fs-1 editable f-weight-500 me-xl-4">{{ page.banner_section.lists }}</p>
-                </div>
-            </div>
-              {% endif %}
+        <div class="row mx-0">
+          <div class="col-lg-6 col-xl-6 p-xl-5">
+              <div class="d-flex flex-column ">
+                  <div class="d-flex justify-content-xl-center">
+                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-xl-5 ps-xl-5 ms-xl-3">{{ page.banner_section.title }}</h1>
+                  </div>
+                  <div class="d-flex justify-content-xl-center ps-xl-5">
+                      <p class="text-white col-xl-6 fs-1 editable f-weight-500 ps-5 ps-xl-0 info-me-7">{{ page.banner_section.lists }}</p>
+                  </div>
+
+<!--              <div class="row mx-0 py-xl-5 ">-->
+<!--                  {% if page.banner_section.title %}-->
+<!--                <div class="d-flex justify-content-evenly col-12 col-xl-12 ps-xl-0 ps-5 py-xl-5">-->
+<!--                    <div class="d-flex justify-content-center ps-xl-0 ps-0">-->
+<!--                        <h1 class="col-lg-6 col-xl-6 col-9 font-size-5-rem text-white editable my-xl-0 lh-1 text-uppercase">{{page.banner_section.title}}</h1>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                  {% endif %}-->
+<!--                  {% if page.banner_section.lists %}-->
+<!--                <div class="d-flex ps-5 ps-xl-5 justify-content-evenly py-xl-2">-->
+<!--                    <div class="d-flex ps-5 ps-xl-0 justify-content-center col-xl-12 ms-xl-4 ">-->
+<!--                        <p class="col-5 col-xl-6 text-white fs-1 editable f-weight-500 me-xl-4">{{ page.banner_section.lists }}</p>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                  {% endif %}-->
+<!--              </div>-->
+
+              </div>
           </div>
           <div class="col-6 d-lg-flex d-none p-0">
             {% if page.banner_section.banner_image_url %}
-              <div class="overflow-hidden w-100" style="height: 50em;">
-                 <img class="w-100 " src="{{ page.banner_section.banner_image_url }}" alt="banner">
+              <div class="d-none d-xxl-block overflow-hidden w-100">
+                 <img class="w-100" src="{{ page.banner_section.banner_image_url }}" alt="banner">
+              </div>
+              <div class="d-none d-lg-block d-xl-none overflow-hidden w-100">
+                  <img class="w-100" src="{{ page.banner_section.banner_image_url }}" alt="banner">
+              </div>
+              <div class=" ">
+
               </div>
 
             {% endif %}
@@ -80,7 +98,7 @@ services_section:
               <div class="col pt-5">
                   {% if page.banner_section.title %}
                   <div class="d-flex justify-content-around">
-                      <H1 class="col-10 text-white py-1 font-title editable">{{page.banner_section.title}}</H1>
+                      <H1 class="col-10 text-white py-1 font-title editable text-uppercase">{{page.banner_section.title}}</H1>
                   </div>
                   {% endif %}
               </div>
@@ -95,7 +113,7 @@ services_section:
       </div>
         <div class="col d-flex justify-content-center px-0 py-3 d-block d-lg-none " style="background-color: #70707040">
             <div class=" ">
-              <a class="col-12 display-3 text-white link-underline link-underline-opacity-0 link-underline-opacity-0-hover font-size-3rem" href="tel:{{ general_data.phone }}">{{ general_data.phone }}</a>
+              <a class="col-12 display-3 text-white link-underline link-underline-opacity-0 link-underline-opacity-0-hover font-size-3rem f-weight-500" href="tel:{{ general_data.phone }}">{{ general_data.phone }}</a>
             </div>
         </div>
         <div class="bg-success py-4 d-flex d-lg-none justify-content-center">
@@ -113,10 +131,19 @@ services_section:
    {% assign sectionTwo = page.contact_section %}
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
-            <div class="row mx-0 px-0 bg-success">
+            <div class="d-flex flex-row mx-0 px-0 bg-success">
                 <div class="col-4 p-0 d-flex">
                     <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
                 </div>
+                <div class="-d-flex flex-column">
+                    <div class="col-lg-9 ">
+                        <div class="d-flex justify-content-center fs-1 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4">Request a consultation</div>
+                    </div>
+                    <div class="pb-lg-4">
+                        {% include contact_form.html %}
+                    </div>
+                </div>
+
 
 <!--                <div class="d-flex col-8 justify-content-around pb-5">-->
 <!--                    <div class="allServices__Service__Text col-8 py-xl-5 py-lg-3">-->
@@ -148,6 +175,84 @@ services_section:
             </div>
         </div>
     </section>
+</section>
+
+<!--DESKTOP CRIME INFO AREA HERE-->
+
+<section class="d-lg-block d-none ">
+    {% assign sectionINFO = page.white_section %}
+    <div>
+        <div class="d-flex flex-row">
+            <div class="d-flex justify-content-xl-end col-xl-5">
+                <div class="d-flex col-xl-8 justify-content-end">
+                    <h3 class="d-flex f-weight-500 fs-2 col-xl-9 lh-1h px-3" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+                </div>
+            </div>
+            <div class="d-flex justify-content-evenly">
+                <div class="d-flex col-10 ">
+                    <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="d-lg-block d-none">
+    <div class="row px-0 mx-0 py-xl-5 justify-content-center" style="background-color: #eef2f3;">
+        {% assign sectionPREFOOTER = page.services_section %}
+        <div class="d-flex flex-row col-xl-6 justify-content-center">
+            <div class="d-flex col-xl-8 me-xl-5 ">
+                <p class="fs-4 px-xl-0 lh-sm " style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>
+            </div>
+            <div class="d-flex col-xl-6 justify-content-evenly ms-xl-5">
+                <ul>
+                    {% for list in sectionPREFOOTER.services %}
+                    <li class="fs-4 f-weight-500" style="color:#0E161E; ">{{ list.list }}</li>
+                    {%endfor%}
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+<!--MOBILE VERSION-->
+
+
+<section class="d-block d-lg-none">
+    {% assign sectionBanner = page.banner_section %}
+    {% assign sectionContact = page.contact_section %}
+    <div class=" ">
+        <div class=" ">
+            <img src="{{ sectionBanner.banner_image_url }}" class="img-fluid">
+        </div>
+        <div class=" ">
+            <img src="{{ sectionContact.banner_image_url }}" class="img-fluid">
+        </div>
+    </div>
+    <div class="py-4 d-flex justify-content-center">
+        <h3 class="d-flex f-weight-500 display-1 lh-1 px-2 col-10" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+    </div>
+    <div class=" ">
+        <div class="pb-3 px-5 ">
+            <p class="f-weight-500 d-flex fs-1 px-3" style="text-align: justify; color: #0E161E; ">{{sectionINFO.description}}</p>
+        </div>
+        <div class="py-5 px-3" style="background-color: #eef2f3;">
+            <p class="f-weight-500 fs-1 px-5" style="color: #0e161e; text-align: justify;">{{sectionPREFOOTER.title}}</p>
+            <ul class="mx-3 lh-1 py-3">
+                {% for list in sectionPREFOOTER.services %}
+                <li class="f-weight-500 fs-1" style="color:#0E161E;">{{ list.list }}</li>
+                {%endfor%}
+            </ul>
+            <div class="d-flex mx-5 mx-md-4">
+                <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-3 rounded-0 text-uppercase border-black mx-md-4 px-5 my-3 f-weight-500 py-3" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex">
+        <h5 class="d-block d-md-none display-3 f-weight-500 px-5 mx-2">{{ sectionTwo.sub_title }} </h5>
+        <h5 class="d-none d-md-block d-lg-none display-5 f-weight-500 px-5 mx-2">{{ sectionTwo.sub_title }} </h5>
+    </div>
 </section>
 
 
