--- a/_pages/criminal-law.html
+++ b/_pages/criminal-law.html
@@ -49,13 +49,13 @@ services_section:
     <div class="container-fluid mx-0 px-0" style="background: linear-gradient(180deg, #741625, #3a0b13);">
       <div class=" d-none d-lg-block">
         <div class="row mx-0">
-          <div class="col-lg-6 col-xl-6 p-xl-5">
+          <div class="col-lg-6 col-xl-6 p-xl-5 py-lg-5 ">
               <div class="d-flex flex-column ">
-                  <div class="d-flex justify-content-xl-center">
-                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-xl-5 ps-xl-5 ms-xl-3">{{ page.banner_section.title }}</h1>
+                  <div class="d-flex justify-content-xl-center justify-content-evenly">
+                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-5 ms-xl-3">{{ page.banner_section.title }}</h1>
                   </div>
-                  <div class="d-flex justify-content-xl-center ps-xl-5">
-                      <p class="text-white col-xl-6 fs-1 editable f-weight-500 ps-5 ps-xl-0 info-me-7">{{ page.banner_section.lists }}</p>
+                  <div class="d-flex justify-content-xl-center justify-content-lg-center ps-xl-5">
+                      <p class="text-white col-xl-6 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7">{{ page.banner_section.lists }}</p>
                   </div>
 
 <!--              <div class="row mx-0 py-xl-5 ">-->
@@ -83,10 +83,9 @@ services_section:
                  <img class="w-100" src="{{ page.banner_section.banner_image_url }}" alt="banner">
               </div>
               <div class="d-none d-lg-block d-xl-none overflow-hidden w-100">
-                  <img class="w-100" src="{{ page.banner_section.banner_image_url }}" alt="banner">
+                  <img class="w-100 h-100" src="{{ page.banner_section.banner_image_url }}" alt="banner">
               </div>
               <div class=" ">
-
               </div>
 
             {% endif %}
@@ -132,10 +131,10 @@ services_section:
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
             <div class="d-flex flex-row mx-0 px-0 bg-success">
-                <div class="col-4 p-0 d-flex">
+                <div class="col-lg-5 col-xl-4 p-0 d-flex">
                     <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
                 </div>
-                <div class="-d-flex flex-column">
+                <div class="-d-flex flex-column col-xl-7">
                     <div class="col-lg-9 ">
                         <div class="d-flex justify-content-center fs-1 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4">Request a consultation</div>
                     </div>
@@ -182,33 +181,46 @@ services_section:
 <section class="d-lg-block d-none ">
     {% assign sectionINFO = page.white_section %}
     <div>
-        <div class="d-flex flex-row">
-            <div class="d-flex justify-content-xl-end col-xl-5">
-                <div class="d-flex col-xl-8 justify-content-end">
-                    <h3 class="d-flex f-weight-500 fs-2 col-xl-9 lh-1h px-3" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+        <div class="d-flex flex-row py-lg-4">
+            <div class="d-flex justify-content-xl-end col-xl-6 col-lg-5 justify-content-lg-evenly">
+                <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">
+                    <h3 class="d-flex f-weight-500 fs-1 col-xl-6 col-lg-11 lh-1h px-0" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
-            <div class="d-flex justify-content-evenly">
-                <div class="d-flex col-10 ">
+            <div class="d-flex justify-content-xl-start justify-content-lg-start">
+                <div class="d-flex col-xl-8 col-lg-11">
                     <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<section class="d-lg-block d-none">
-    <div class="row px-0 mx-0 py-xl-5 justify-content-center" style="background-color: #eef2f3;">
-        {% assign sectionPREFOOTER = page.services_section %}
-        <div class="d-flex flex-row col-xl-6 justify-content-center">
-            <div class="d-flex col-xl-8 me-xl-5 ">
-                <p class="fs-4 px-xl-0 lh-sm " style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>
-            </div>
-            <div class="d-flex col-xl-6 justify-content-evenly ms-xl-5">
-                <ul>
-                    {% for list in sectionPREFOOTER.services %}
-                    <li class="fs-4 f-weight-500" style="color:#0E161E; ">{{ list.list }}</li>
-                    {%endfor%}
-                </ul>
+<section class="d-lg-flex d-none justify-content-end">
+    <div class="d-flex col-xl-10 col-lg-11">
+        <div class="row px-lg-5 mx-0 py-xl-5 py-lg-5 justify-content-start" style="background-color: #eef2f3;">
+            {% assign sectionPREFOOTER = page.services_section %}
+            <div class="d-flex flex-row col-xl-6 justify-content-center justify-content-xl-start justify-content-lg-around px-lg-5">
+                <div class="d-flex flex-column col-xl-10 col-lg-6 me-xl-5 ">
+                    <p class="fs-3 lh-sm ps-xl-4 py-xl-2" style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>
+                    <div class="d-xl-flex d-lg-none mx-5 mx-md-0 px-xl-0">
+                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-5 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
+                    </div>
+                    <div class="d-lg-flex d-xl-none mx-5 mx-md-5 px-xl-4">
+                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-4 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
+                    </div>
+                </div>
+                <div class="d-flex col-xl-8 col-lg-4 justify-content-end ms-xl-5">
+                    <ul class="ps-xl-4 d-xl-flex d-lg-none flex-column ">
+                        {% for list in sectionPREFOOTER.services %}
+                        <li class=" fs-3 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
+                        {%endfor%}
+                    </ul>
+                    <ul class="ps-xl-4 d-lg-flex d-xl-none flex-column ">
+                        {% for list in sectionPREFOOTER.services %}
+                        <li class=" fs-4 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
+                        {%endfor%}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -250,8 +262,8 @@ services_section:
         </div>
     </div>
     <div class="d-flex">
-        <h5 class="d-block d-md-none display-3 f-weight-500 px-5 mx-2">{{ sectionTwo.sub_title }} </h5>
-        <h5 class="d-none d-md-block d-lg-none display-5 f-weight-500 px-5 mx-2">{{ sectionTwo.sub_title }} </h5>
+        <h5 class="d-block d-md-none display-3 f-weight-500 px-5 mx-2 pt-5">{{ sectionTwo.sub_title }} </h5>
+        <h5 class="d-none d-md-block d-lg-none display-5 f-weight-500 px-5 mx-2 pt-5">{{ sectionTwo.sub_title }} </h5>
     </div>
 </section>
 
