--- a/_pages/about.html
+++ b/_pages/about.html
@@ -119,7 +119,7 @@ one_column_section: >-
 			</div>
 			{%endfor%}
 			<section class="py-3 ">
-				<div class="col-10 d-flex justify-content-center justify-content-lg-start text-start px-5 mx-2">
+				<div class="col-10 d-flex justify-content-center justify-content-lg-start text-start px-xl-0 px-5 mx-lg-0 mx-2">
 					<h5 class="text-success text-uppercase display-3 f-weight-500 d-block d-lg-none">request a consultation</h5>
 					<h5 class="text-success text-uppercase fs-3 f-weight-500 d-none d-lg-block">request a consultation</h5>
 				</div>
@@ -130,7 +130,7 @@ one_column_section: >-
 			</section>
 			<section class=" ">
 				<form action="https://formspree.io/f/mkndnqlr" method="POST"
-					  class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-12 px-5">
+					  class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-12 col-xl-10 px-5 px-xl-0 pe-xl-5">
 					<div class="field-group inputs-container">
 						<div class="mb-3 ">
 							<input type="email" class="form-control" id="inputName" placeholder="NAME" style="background-color: #eef2f3;;">
@@ -142,11 +142,11 @@ one_column_section: >-
 							<input type="text" class="form-control" id="inputPhone1" placeholder="PHONE NUMBER" style="background-color: #eef2f3;;">
 						</div>
 					</div>
-					<div class="field-group message-container">
+					<div class="field-group message-container pe-xl-5">
 						<div class="mb-3 ">
 							<textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: #eef2f3;;" ></textarea>
 						</div>
-						<input type="submit" class="d-none d-lg-block ms-lg-auto formSubmit-Desktop text-white bg-success" value="submit" />
+						<input type="submit" class="d-none d-lg-block ms-lg-auto text-uppercase fs-3 py-3 px-4 text-white bg-success" value="submit" />
 					</div>
 				</form>
 		</section>
