--- a/_pages/additional-services.html
+++ b/_pages/additional-services.html
@@ -9,10 +9,11 @@ keywords: >-
 permalink: "/additional-services"
 banner_section:
   title: "Additional Services"
-  sub_title: "Legal Problem? Call now."
+  lists:
+    - Legal Problem? Call now.
   banner_image_url: "/assets/images/banner_one.jpg"
 
-contact_form_section:
+contact_section:
   title: "CONTACT US now for a consultation"
   sub_title: "REQUEST A CONSULTATION"
   banner_image_url: "/assets/images/banner_6.jpg"
@@ -46,10 +47,10 @@ services_section:
           <div class="col-lg-6 col-xl-6 p-xl-5 py-lg-5 ">
               <div class="d-flex flex-column ">
                   <div class="d-flex justify-content-xl-center justify-content-evenly">
-                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-5 ms-xl-3">{{ page.banner_section.title }}</h1>
+                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-4 ms-xl-4">{{ page.banner_section.title }}</h1>
                   </div>
-                  <div class="d-flex justify-content-xl-center justify-content-lg-center ps-xl-5">
-                      <p class="text-white col-xl-7  fs-1 editable f-weight-500 ps-xl-5 col-lg-10 info-me-7 text-uppercase">{{ page.banner_section.sub_title }}</p>
+                  <div class="d-flex justify-content-xl-end justify-content-lg-center">
+                      <p class="text-white text-uppercase col-xl-6 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7 col-xl-8 ">{{ page.banner_section.lists }}</p>
                   </div>
               </div>
           </div>
@@ -103,18 +104,18 @@ services_section:
 <!--DESKTOP VERSION-->
 
 <section class="sliceZone d-lg-block d-none container-fluid px-0 mx-0">
-   {% assign sectionTwo = page.contact_form_section %}
+   {% assign sectionTwo = page.contact_section %}
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
-            <div class="d-flex flex-row mx-0 px-0 bg-success">
+            <div class="d-flex flex-row mx-0 px-0 bg-success justify-content-lg-between justify-content-xl-start">
                 <div class="col-lg-5 col-xl-4 p-0 d-flex">
-                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
+                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100 object-fit-cover" />
                 </div>
-                <div class="-d-flex flex-column col-xl-7">
-                    <div class="col-lg-9 ">
-                        <div class="d-flex justify-content-center fs-1 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4">Request a consultation</div>
+                <div class="d-flex flex-column col-xl-8 py-lg-5">
+                    <div class="col-lg-12 col-xl-10 d-flex ">
+                        <div class="d-flex justify-content-xl-end justify-content-lg-start fs-2 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4 pe-xl-0 col-xl-6 col-lg-12 ms-lg-4 ms-xl-4 ps-lg-2 ps-xl-0">Request a consultation</div>
                     </div>
-                    <div class="pb-lg-4">
+                    <div class="col-12 px-2 d-flex">
                         {% include contact_form.html %}
                     </div>
                 </div>
@@ -130,12 +131,12 @@ services_section:
     <div>
         <div class="d-flex flex-row py-lg-4">
             <div class="d-flex justify-content-xl-end col-xl-5 col-lg-5 justify-content-lg-evenly">
-                <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">
-                    <h3 class="d-flex f-weight-500 fs-1 col-xl-6 col-lg-11 lh-1h px-0 text-uppercase" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+                <div class="d-flex col-xl-9 col-lg-10 justify-content-xl-center justify-content-lg-center">
+                    <h3 class="text-uppercase d-flex f-weight-500 fs-2 col-xl-8 col-lg-9 lh-1h px-xl-5" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
             <div class="d-flex justify-content-xl-start justify-content-lg-start">
-                <div class="d-flex col-xl-8 col-lg-11">
+                <div class="d-flex col-xl-9 col-lg-11">
                     <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
                 </div>
             </div>
@@ -147,19 +148,19 @@ services_section:
         <div class="row px-lg-5 mx-0 py-xl-5 py-lg-5 justify-content-start" style="background-color: #eef2f3;">
             {% assign sectionPREFOOTER = page.services_section %}
             <div class="d-flex flex-row col-xl-6 justify-content-center justify-content-xl-start justify-content-lg-around px-lg-5">
-                <div class="d-flex flex-column col-xl-9 col-lg-6 me-xl-5 ">
+                <div class="d-flex flex-column col-xl-11 col-lg-6 me-xl-5 ">
                     <p class="fs-4 lh-sm ps-xl-4 py-xl-2" style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>
                     <div class="d-xl-flex d-lg-none mx-5 mx-md-0 px-xl-0">
                         <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-5 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
                     </div>
-                    <div class="d-lg-flex d-xl-none mx-5 mx-md-5 px-xl-4">
-                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-4  my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
+                    <div class="d-lg-flex d-xl-none mx-5 mx-md-0 mx-lg-0 px-xl-4">
+                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-0 mx-lg-0 px-4  my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
                     </div>
                 </div>
                 <div class="d-flex col-xl-9 col-lg-4 justify-content-end ms-xl-5">
                     <ul class="ps-xl-4 d-xl-flex d-lg-none flex-column ">
                         {% for list in sectionPREFOOTER.services %}
-                        <li class=" fs-3 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
+                        <li class=" fs-4 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
                         {%endfor%}
                     </ul>
                     <ul class="ps-xl-4 d-lg-flex d-xl-none flex-column ">
