--- a/_pages/criminal-law.html
+++ b/_pages/criminal-law.html
@@ -54,27 +54,9 @@ services_section:
                   <div class="d-flex justify-content-xl-center justify-content-evenly">
                       <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-5 ms-xl-3">{{ page.banner_section.title }}</h1>
                   </div>
-                  <div class="d-flex justify-content-xl-center justify-content-lg-center ps-xl-5">
-                      <p class="text-white col-xl-6 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7">{{ page.banner_section.lists }}</p>
+                  <div class="d-flex justify-content-xl-end justify-content-lg-center ps-xl-4 ">
+                      <p class="text-white col-xl-8 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7">{{ page.banner_section.lists }}</p>
                   </div>
-
-<!--              <div class="row mx-0 py-xl-5 ">-->
-<!--                  {% if page.banner_section.title %}-->
-<!--                <div class="d-flex justify-content-evenly col-12 col-xl-12 ps-xl-0 ps-5 py-xl-5">-->
-<!--                    <div class="d-flex justify-content-center ps-xl-0 ps-0">-->
-<!--                        <h1 class="col-lg-6 col-xl-6 col-9 font-size-5-rem text-white editable my-xl-0 lh-1 text-uppercase">{{page.banner_section.title}}</h1>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                  {% endif %}-->
-<!--                  {% if page.banner_section.lists %}-->
-<!--                <div class="d-flex ps-5 ps-xl-5 justify-content-evenly py-xl-2">-->
-<!--                    <div class="d-flex ps-5 ps-xl-0 justify-content-center col-xl-12 ms-xl-4 ">-->
-<!--                        <p class="col-5 col-xl-6 text-white fs-1 editable f-weight-500 me-xl-4">{{ page.banner_section.lists }}</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                  {% endif %}-->
-<!--              </div>-->
-
               </div>
           </div>
           <div class="col-6 d-lg-flex d-none p-0">
@@ -130,15 +112,15 @@ services_section:
    {% assign sectionTwo = page.contact_section %}
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
-            <div class="d-flex flex-row mx-0 px-0 bg-success">
+            <div class="d-flex flex-row justify-content-lg-between justify-content-xl-start mx-0 px-0 bg-success">
                 <div class="col-lg-5 col-xl-4 p-0 d-flex">
-                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
+                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100 object-fit-cover" />
                 </div>
-                <div class="-d-flex flex-column col-xl-7">
-                    <div class="col-lg-9 ">
-                        <div class="d-flex justify-content-center fs-1 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4">Request a consultation</div>
+                <div class="d-flex flex-column col-xl-8 py-lg-5">
+                    <div class="col-lg-12 col-xl-10 d-flex ">
+                        <div class="d-flex justify-content-xl-end justify-content-lg-start fs-2 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4 pe-xl-0 col-xl-6 col-lg-12 ms-lg-4 ms-xl-4 ps-lg-2 ps-xl-0">Request a consultation</div>
                     </div>
-                    <div class="pb-lg-4">
+                    <div class="col-12 px-2 d-flex">
                         {% include contact_form.html %}
                     </div>
                 </div>
@@ -178,44 +160,101 @@ services_section:
 
 <!--DESKTOP CRIME INFO AREA HERE-->
 
+<!--<section class="d-lg-block d-none ">-->
+<!--    {% assign sectionINFO = page.white_section %}-->
+<!--    <div>-->
+<!--        <div class="d-flex flex-row py-lg-4">-->
+<!--            <div class="d-flex justify-content-xl-end col-xl-6 col-lg-5 justify-content-lg-evenly">-->
+<!--                <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">-->
+<!--                    <h3 class="d-flex f-weight-500 fs-1 col-xl-6 col-lg-11 lh-1h px-0" style="color: #0E161E; ">{{sectionINFO.title}}</h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="d-flex justify-content-xl-start justify-content-lg-start">-->
+<!--                <div class="d-flex col-xl-8 col-lg-11">-->
+<!--                    <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+<!--<section class="d-lg-flex d-none justify-content-end">-->
+<!--    <div class="d-flex col-xl-10 col-lg-11">-->
+<!--        <div class="row px-lg-5 mx-0 py-xl-5 py-lg-5 justify-content-start" style="background-color: #eef2f3;">-->
+<!--            {% assign sectionPREFOOTER = page.services_section %}-->
+<!--            <div class="d-flex flex-row col-xl-6 justify-content-center justify-content-xl-start justify-content-lg-around px-lg-5">-->
+<!--                <div class="d-flex flex-column col-xl-10 col-lg-6 me-xl-5 ">-->
+<!--                    <p class="fs-3 lh-sm ps-xl-4 py-xl-2" style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>-->
+<!--                    <div class="d-xl-flex d-lg-none mx-5 mx-md-0 px-xl-0">-->
+<!--                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-5 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>-->
+<!--                    </div>-->
+<!--                    <div class="d-lg-flex d-xl-none mx-5 mx-md-5 px-xl-4">-->
+<!--                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-4 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="d-flex col-xl-8 col-lg-4 justify-content-end ms-xl-5">-->
+<!--                    <ul class="ps-xl-4 d-xl-flex d-lg-none flex-column ">-->
+<!--                        {% for list in sectionPREFOOTER.services %}-->
+<!--                        <li class=" fs-3 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>-->
+<!--                        {%endfor%}-->
+<!--                    </ul>-->
+<!--                    <ul class="ps-xl-4 d-lg-flex d-xl-none flex-column ">-->
+<!--                        {% for list in sectionPREFOOTER.services %}-->
+<!--                        <li class=" fs-4 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>-->
+<!--                        {%endfor%}-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 <section class="d-lg-block d-none ">
     {% assign sectionINFO = page.white_section %}
     <div>
         <div class="d-flex flex-row py-lg-4">
-            <div class="d-flex justify-content-xl-end col-xl-6 col-lg-5 justify-content-lg-evenly">
+            <div class="d-flex justify-content-xl-end col-xl-5 col-lg-5 justify-content-lg-evenly">
                 <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">
-                    <h3 class="d-flex f-weight-500 fs-1 col-xl-6 col-lg-11 lh-1h px-0" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-4 px-lg-4" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
             <div class="d-flex justify-content-xl-start justify-content-lg-start">
-                <div class="d-flex col-xl-8 col-lg-11">
+                <div class="d-flex col-xl-9 col-lg-11">
                     <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<section>
+    <div class="d-flex flex-row">
+        {% for img in page.gallery %}
+        <div class="col-xl-4">
+            <img src="{{img.image_url}}" class="w-100 object-fit-cover h-100">
+        </div>
+        {% endfor %}
+    </div>
+</section>
+
 <section class="d-lg-flex d-none justify-content-end">
     <div class="d-flex col-xl-10 col-lg-11">
         <div class="row px-lg-5 mx-0 py-xl-5 py-lg-5 justify-content-start" style="background-color: #eef2f3;">
             {% assign sectionPREFOOTER = page.services_section %}
-            <div class="d-flex flex-row col-xl-6 justify-content-center justify-content-xl-start justify-content-lg-around px-lg-5">
-                <div class="d-flex flex-column col-xl-10 col-lg-6 me-xl-5 ">
-                    <p class="fs-3 lh-sm ps-xl-4 py-xl-2" style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>
+            <div class="d-flex flex-row col-xl-6 justify-content-center justify-content-xl-start justify-content-lg-around  px-lg-0 px-xl-5">
+                <div class="d-flex flex-column col-xl-12 col-lg-8 me-xl-5  ">
+                    <p class="fs-3 lh-sm ps-xl-4 py-xl-2 px-lg-5" style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>
                     <div class="d-xl-flex d-lg-none mx-5 mx-md-0 px-xl-0">
-                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-5 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
+                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-4 rounded-0 text-uppercase border-black mx-md-4 px-5 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
                     </div>
                     <div class="d-lg-flex d-xl-none mx-5 mx-md-5 px-xl-4">
-                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-4 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
+                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 mx-lg-0 px-4  my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
                     </div>
                 </div>
-                <div class="d-flex col-xl-8 col-lg-4 justify-content-end ms-xl-5">
-                    <ul class="ps-xl-4 d-xl-flex d-lg-none flex-column ">
+                <div class="d-flex col-xl-10 col-lg-4 justify-content-end ms-xl-5">
+                    <ul class="ps-xl-4 d-xl-flex d-lg-none flex-column col-xl-9">
                         {% for list in sectionPREFOOTER.services %}
                         <li class=" fs-3 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
                         {%endfor%}
                     </ul>
-                    <ul class="ps-xl-4 d-lg-flex d-xl-none flex-column ">
+                    <ul class="ps-xl-4 d-lg-flex d-xl-none flex-column">
                         {% for list in sectionPREFOOTER.services %}
                         <li class=" fs-4 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
                         {%endfor%}
@@ -225,8 +264,6 @@ services_section:
         </div>
     </div>
 </section>
-
-
 
 <!--MOBILE VERSION-->
 
