--- a/_pages/dwi-owi.html
+++ b/_pages/dwi-owi.html
@@ -47,30 +47,12 @@ services_section:
         <div class="row mx-0">
           <div class="col-lg-6 col-xl-6 p-xl-5 py-lg-5 ">
               <div class="d-flex flex-column ">
-                  <div class="d-flex justify-content-xl-evenly justify-content-evenly">
-                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-4 ms-xl-5">{{ page.banner_section.title }}</h1>
+                  <div class="d-flex justify-content-xl-center justify-content-evenly">
+                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-5 ms-xl-3">{{ page.banner_section.title }}</h1>
                   </div>
-                  <div class="d-flex justify-content-xl-center justify-content-lg-center ps-xl-5">
-                      <p class="text-white col-xl-6 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7">{{ page.banner_section.lists }}</p>
+                  <div class="d-flex justify-content-xl-end justify-content-lg-center ps-xl-4 ">
+                      <p class="text-white col-xl-8 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7">{{ page.banner_section.lists }}</p>
                   </div>
-
-<!--              <div class="row mx-0 py-xl-5 ">-->
-<!--                  {% if page.banner_section.title %}-->
-<!--                <div class="d-flex justify-content-evenly col-12 col-xl-12 ps-xl-0 ps-5 py-xl-5">-->
-<!--                    <div class="d-flex justify-content-center ps-xl-0 ps-0">-->
-<!--                        <h1 class="col-lg-6 col-xl-6 col-9 font-size-5-rem text-white editable my-xl-0 lh-1 text-uppercase">{{page.banner_section.title}}</h1>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                  {% endif %}-->
-<!--                  {% if page.banner_section.lists %}-->
-<!--                <div class="d-flex ps-5 ps-xl-5 justify-content-evenly py-xl-2">-->
-<!--                    <div class="d-flex ps-5 ps-xl-0 justify-content-center col-xl-12 ms-xl-4 ">-->
-<!--                        <p class="col-5 col-xl-6 text-white fs-1 editable f-weight-500 me-xl-4">{{ page.banner_section.lists }}</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                  {% endif %}-->
-<!--              </div>-->
-
               </div>
           </div>
           <div class="col-6 d-lg-flex d-none p-0">
@@ -126,47 +108,18 @@ services_section:
    {% assign sectionTwo = page.contact_section %}
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
-            <div class="d-flex flex-row mx-0 px-0 bg-success">
+            <div class="d-flex flex-row mx-0 px-0 bg-success justify-content-lg-between justify-content-xl-start">
                 <div class="col-lg-5 col-xl-4 p-0 d-flex">
-                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
+                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100 object-fit-cover" />
                 </div>
-                <div class="-d-flex flex-column col-xl-7">
-                    <div class="col-lg-9 ">
-                        <div class="d-flex justify-content-center fs-1 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4">Request a consultation</div>
+                <div class="d-flex flex-column col-xl-8 py-lg-5">
+                    <div class="col-lg-12 col-xl-10 d-flex ">
+                        <div class="d-flex justify-content-xl-end justify-content-lg-start fs-2 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4 pe-xl-0 col-xl-6 col-lg-12 ms-lg-4 ms-xl-4 ps-lg-2 ps-xl-0">Request a consultation</div>
                     </div>
-                    <div class="pb-lg-4">
+                    <div class="col-12 px-2 d-flex">
                         {% include contact_form.html %}
                     </div>
                 </div>
-
-
-<!--                <div class="d-flex col-8 justify-content-around pb-5">-->
-<!--                    <div class="allServices__Service__Text col-8 py-xl-5 py-lg-3">-->
-<!--                        {% if sectionTwo.title %}-->
-<!--                        <h3 class="px-4 fs-3  ">{{ sectionTwo.title }}</h3>-->
-<!--                        {% endif %}-->
-<!--                        {% if sectionTwo.subtitle %}-->
-<!--                        <p class="px-4 fs-4 ">{{ sectionTwo.subtitle }}</p>-->
-<!--                        {% endif %}-->
-<!--                        <div class="fs-4">-->
-<!--                            <div class="d-grid lh-sm">-->
-<!--                                <ul class="row ">-->
-<!--                                {% for list in sectionTwo.lists %}-->
-<!--                                  <div class="col-6 py-1">-->
-<!--                                    <li class="ps-1 col-10" style="">{{ list }}</li>-->
-<!--                                  </div>-->
-<!--                                {% endfor %}-->
-<!--                                </ul>-->
-<!--                            </div>-->
-<!--                        <div class=" ">-->
-<!--                            {% if sectionTwo.button_text %}-->
-<!--        &lt;!&ndash;                   <a href="{{ sectionTwo.button_url }}">{{sectionTwo.button_text}}</a>&ndash;&gt;-->
-<!--                            <a href="{{ sectionTwo.button_url }}" class="btn btn-lg rounded-0 text-uppercase border-success text-success mx-5 px-4 my-xl-4 my-0" role="button">{{sectionTwo.button_text}}</a>-->
-<!--                            {% endif %}-->
-<!--                        </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
             </div>
         </div>
     </section>
@@ -178,14 +131,14 @@ services_section:
     {% assign sectionINFO = page.white_section %}
     <div>
         <div class="d-flex flex-row py-lg-4">
-            <div class="d-flex justify-content-xl-end col-xl-6 col-lg-5 justify-content-lg-evenly">
-                <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">
-                    <h3 class="d-flex f-weight-500 fs-1 col-xl-6 col-lg-11 lh-1h px-0" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+            <div class="d-flex justify-content-xl-end col-xl-5 col-lg-5 justify-content-lg-evenly">
+                <div class="d-flex col-xl-9 col-lg-10 justify-content-xl-center justify-content-lg-center">
+                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-5" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
             <div class="d-flex justify-content-xl-start justify-content-lg-start">
-                <div class="d-flex col-xl-11 col-lg-11">
-                    <p class="fs-4 px-xl-5 lh-sm col-xl-10" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
+                <div class="d-flex col-xl-9 col-lg-11">
+                    <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
                 </div>
             </div>
         </div>
@@ -205,7 +158,7 @@ services_section:
                         <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-4  my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
                     </div>
                 </div>
-                <div class="d-flex col-xl-9 col-lg-4 justify-content-end ms-xl-5">
+                <div class="d-flex col-xl-10 col-lg-4 justify-content-end ms-xl-5">
                     <ul class="ps-xl-4 d-xl-flex d-lg-none flex-column col-xl-9">
                         {% for list in sectionPREFOOTER.services %}
                         <li class=" fs-3 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
