--- a/_pages/family-law.html
+++ b/_pages/family-law.html
@@ -114,15 +114,15 @@ services_section:
    {% assign sectionTwo = page.contact_section %}
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
-            <div class="d-flex flex-row mx-0 px-0 bg-success">
+            <div class="d-flex flex-row mx-0 px-0 bg-success justify-content-lg-between justify-content-xl-start">
                 <div class="col-lg-5 col-xl-4 p-0 d-flex">
-                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100" />
+                    <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100 object-fit-cover" />
                 </div>
-                <div class="-d-flex flex-column col-xl-7">
-                    <div class="col-lg-9 ">
-                        <div class="d-flex justify-content-center fs-1 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4">Request a consultation</div>
+                <div class="d-flex flex-column col-xl-8 py-lg-5">
+                    <div class="col-lg-12 col-xl-10 d-flex ">
+                        <div class="d-flex justify-content-xl-end justify-content-lg-start fs-2 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4 pe-xl-0 col-xl-6 col-lg-12 ms-lg-4 ms-xl-4 ps-lg-2 ps-xl-0">Request a consultation</div>
                     </div>
-                    <div class="pb-lg-4">
+                    <div class="col-12 px-2 d-flex">
                         {% include contact_form.html %}
                     </div>
                 </div>
@@ -137,13 +137,13 @@ services_section:
     {% assign sectionINFO = page.white_section %}
     <div>
         <div class="d-flex flex-row py-lg-4">
-            <div class="d-flex justify-content-xl-end col-xl-6 col-lg-5 justify-content-lg-evenly">
-                <div class="d-flex col-xl-8 col-lg-10 justify-content-xl-center justify-content-lg-center">
-                    <h3 class="d-flex f-weight-500 fs-1 col-xl-6 col-lg-11 lh-1h px-0" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+            <div class="d-flex justify-content-xl-end col-xl-5 col-lg-5 justify-content-lg-evenly">
+                <div class="d-flex col-xl-9 col-lg-10 justify-content-xl-center justify-content-lg-center">
+                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-4" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
             <div class="d-flex justify-content-xl-start justify-content-lg-start">
-                <div class="d-flex col-xl-8 col-lg-11">
+                <div class="d-flex col-xl-9 col-lg-11">
                     <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
                 </div>
             </div>
@@ -154,20 +154,20 @@ services_section:
     <div class="d-flex col-xl-10 col-lg-11">
         <div class="row px-lg-5 mx-0 py-xl-5 py-lg-5 justify-content-start" style="background-color: #eef2f3;">
             {% assign sectionPREFOOTER = page.services_section %}
-            <div class="d-flex flex-row col-xl-6 justify-content-center justify-content-xl-start justify-content-lg-around px-lg-5">
-                <div class="d-flex flex-column col-xl-9 col-lg-6 me-xl-5 ">
+            <div class="d-flex flex-row col-xl-6 justify-content-center justify-content-xl-start justify-content-lg-around px-lg-5 py-xl-5">
+                <div class="d-flex flex-column col-xl-10 col-lg-6 me-xl-5  ">
                     <p class="fs-4 lh-sm ps-xl-4 py-xl-2" style="text-align: justify; color: #0E161E;">{{sectionPREFOOTER.title}}</p>
                     <div class="d-xl-flex d-lg-none mx-5 mx-md-0 px-xl-0">
                         <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-3 rounded-0 text-uppercase border-black mx-md-4 px-5 my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
                     </div>
-                    <div class="d-lg-flex d-xl-none mx-5 mx-md-5 px-xl-4">
-                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-4 px-4  my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
+                    <div class="d-lg-flex d-xl-none mx-5 mx-md-0 px-xl-4">
+                        <a href="{{ sectionPREFOOTER.button_url }}" class="btn btn-lg fs-5 rounded-0 text-uppercase border-black mx-md-0 px-4  my-3 f-weight-500 py-3 py-xl-2 px-xl-4" role="button" style="color: #0E161E;">{{ sectionPREFOOTER.button_text }}</a>
                     </div>
                 </div>
-                <div class="d-flex col-xl-9 col-lg-4 justify-content-end ms-xl-5">
+                <div class="d-flex col-xl-10 col-lg-4 justify-content-end ms-xl-5">
                     <ul class="ps-xl-4 d-xl-flex d-lg-none flex-column ">
                         {% for list in sectionPREFOOTER.services %}
-                        <li class=" fs-3 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
+                        <li class=" fs-4 f-weight-500 lh-1 py-1" style="color:#0E161E; ">{{ list.list }}</li>
                         {%endfor%}
                     </ul>
                     <ul class="ps-xl-4 d-lg-flex d-xl-none flex-column ">
