--- a/_pages/personal-injury.html
+++ b/_pages/personal-injury.html
@@ -46,10 +46,10 @@ services_section:
           <div class="col-lg-6 col-xl-6 p-xl-5 py-lg-5 ">
               <div class="d-flex flex-column ">
                   <div class="d-flex justify-content-xl-center justify-content-evenly">
-                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-5 ms-xl-0">{{ page.banner_section.title }}</h1>
+                      <h1 class="font-size-5-rem text-white editable lh-1 text-uppercase col-lg-10 col-xl-5 ps-xl-4 ms-xl-4">{{ page.banner_section.title }}</h1>
                   </div>
-                  <div class="d-flex justify-content-xl-center justify-content-lg-center ps-xl-5">
-                      <p class="text-white col-xl-6 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7">{{ page.banner_section.lists }}</p>
+                  <div class="d-flex justify-content-xl-end justify-content-lg-center">
+                      <p class="text-white col-xl-6 fs-1 editable f-weight-500 ps-xl-0 col-lg-10 info-me-7 col-xl-8 ">{{ page.banner_section.lists }}</p>
                   </div>
               </div>
           </div>
@@ -106,15 +106,15 @@ services_section:
    {% assign sectionTwo = page.contact_section %}
     <section class="allServices fs-3 ">
         <div class="allServices__Service row mx-0 justify-content-end">
-            <div class="d-flex flex-row mx-0 px-0 bg-success">
+            <div class="d-flex flex-row mx-0 px-0 bg-success justify-content-lg-between justify-content-xl-start">
                 <div class="col-lg-5 col-xl-4 p-0 d-flex">
                     <img src="{{sectionTwo.banner_image_url}}" alt="{{sectionTwo.title}}" class="w-100 object-fit-cover" />
                 </div>
-                <div class="-d-flex flex-column col-xl-7">
-                    <div class="col-lg-9 ">
-                        <div class="d-flex justify-content-xl-end justify-content-lg-end fs-1 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4 col-xl-7 col-lg-12 ms-xl-3 ms-lg-4">Request a consultation</div>
+                <div class="d-flex flex-column col-xl-8 py-lg-5">
+                    <div class="col-lg-12 col-xl-10 d-flex ">
+                        <div class="d-flex justify-content-xl-end justify-content-lg-start fs-2 text-white text-uppercase f-weight-500 pt-lg-5 pe-lg-4 pe-xl-0 col-xl-6 col-lg-12 ms-lg-4 ms-xl-4 ps-lg-2 ps-xl-0">Request a consultation</div>
                     </div>
-                    <div class="col-12 px-2">
+                    <div class="col-12 px-2 d-flex">
                         {% include contact_form.html %}
                     </div>
                 </div>
@@ -131,11 +131,11 @@ services_section:
         <div class="d-flex flex-row py-lg-4">
             <div class="d-flex justify-content-xl-end col-xl-5 col-lg-5 justify-content-lg-evenly">
                 <div class="d-flex col-xl-9 col-lg-10 justify-content-xl-center justify-content-lg-center">
-                    <h3 class="d-flex f-weight-500 fs-1 col-xl-7 col-lg-11 lh-1h px-0" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
+                    <h3 class="d-flex f-weight-500 fs-2 col-xl-8 col-lg-11 lh-1h px-xl-4" style="color: #0E161E; ">{{sectionINFO.title}}</h3>
                 </div>
             </div>
             <div class="d-flex justify-content-xl-start justify-content-lg-start">
-                <div class="d-flex col-xl-8 col-lg-11">
+                <div class="d-flex col-xl-9 col-lg-11">
                     <p class="fs-4 px-xl-5 lh-sm" style="color: #0E161E; text-align: justify;">{{sectionINFO.description}}</p>
                 </div>
             </div>
@@ -183,8 +183,6 @@ services_section:
         </div>
     </div>
 </section>
-
-
 
 <!--MOBILE VERSION-->
 
